"refactor: simplifica classe AssuntoNotificacao e implementa padrão Observer
- Renomeia campo 'observadores' para 'obs' mais conciso
- Adiciona modificador 'final' para imutabilidade
- Simplifica nomes de parâmetros ('o' em vez de 'observador')
- Utiliza 'var' no loop para melhor legibilidade
- Mantém funcionalidade intacta do padrão Observer
- Prepara classe para injeção de dependência com Spring"